--- a/.storybook/preview-body.html
+++ b/.storybook/preview-body.html
@@ -1,7 +1,10 @@
 <!-- .storybook/preview-body.html -->
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5266987079964279"
-     crossorigin="anonymous"></script>
+<script
+  async
+  src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5266987079964279"
+  crossorigin="anonymous"
+></script>
 
 <style>
   html {
